--- a/app.css
+++ b/app.css
@@ -303,3 +303,32 @@ a:hover{
     padding: 1rem 2rem;
     border-radius: 50px;
 }
+
+.firstpageinpdiv{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    gap:1rem;
+    padding: 2rem;
+}
+.firstpagenameinpt{
+    width:60%;
+    height: 2rem;
+    text-align: center;
+    border:none;
+    border-bottom:1.5px solid black;
+    border-radius: 3px;
+    margin-top: 1rem;
+    background-color: transparent;
+    color:black;
+}
+.letsgetstartedbtn{
+    width: 40%;
+    padding:0.7rem;
+    background-color: white;
+    color:black;
+    border-radius: 8px solid white;
+    font-size:large;
+    font-weight: 540;
+}
